<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>


    <string name="string_start_welcome">welcome</string>

    <string name="tost_exit_app_by_click_double">再按一次退出程序</string>

    <!--   启动页、体验页、登录页面资源文字 -->
    <string name="string_now_experience">立即体验</string>
    <string name="string_phone">手机号</string>
    <string name="string_password">密码</string>
    <string name="string_loging">登录</string>
    <string name="string_register">注册</string>
    <string name="string_forgetpassword">忘记密码</string>
    <string name="string_description">版权所有</string>

    <!--  home 页面资源文字-->
    <string name="string_home_tab_home">主页</string>
    <string name="string_home_tab_message">消息</string>
    <string name="string_home_tab_friends">我的好友</string>
    <string name="string_home_tab_call">电话</string>
    <string name="string_home_tab_history">通讯录</string>

    <!-- home fragment界面资源文字-->
    <string name="string_home_tab_viedeo">视频</string>
    <string name="string_home_tab_map">地图</string>
    <string name="string_home_tab_pay">支付</string>
    <string name="string_home_tab_read">吐槽</string>
    <string name="string_home_tab_game">游戏</string>
    <string name="string_home_tab_setting">设置</string>




    <!-- 提示文字 -->
    <string name="DEBUG_EVENT_LISTENER_TIPS">找不到监听事件</string>



</resources>
