<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

        <!-- 导入顶栏 -->
        <include layout="@layout/toolbar_layout" />

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_line_height"
        android:background="@color/colorLine"
        />
    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_home_tab_paddinBottom"
        android:paddingTop="@dimen/dimen_home_tab_paddinBottom"
        >
        <RadioButton
            android:id="@+id/radiobutton_call"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/string_home_tab_call"
            android:drawableTop="@drawable/selector_tab_call"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:gravity="center"
            android:textColor="@drawable/selector_tab_font_color"
            />
        <RadioButton
            android:id="@+id/radiobutton_history"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/string_home_tab_history"
            android:drawableTop="@drawable/selector_tab_history"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:gravity="center"
            android:textColor="@drawable/selector_tab_font_color"
            />
        <RadioButton
            android:id="@+id/radiobutton_home"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/string_home_tab_home"
            android:checked="true"
            android:drawableTop="@drawable/selector_tab_home"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:gravity="center"
            android:textColor="@drawable/selector_tab_font_color"
            />
        <RadioButton
            android:id="@+id/radiobutton_message"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/string_home_tab_message"
            android:drawableTop="@drawable/selector_tab_message"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:gravity="center"
            android:textColor="@drawable/selector_tab_font_color"
            />
        <RadioButton
            android:id="@+id/radiobutton_friends"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/string_home_tab_friends"
            android:drawableTop="@drawable/selector_tab_friends"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:gravity="center"
            android:textColor="@drawable/selector_tab_font_color"
            />

    </RadioGroup>


</LinearLayout>
