<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_home_propaganda_height">
        <com.example.hongchun.myapplication.ui.view.CarouselViewpage
            android:id="@+id/viewpage_carouselViewpage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_home_propaganda_height"
            android:background="@color/colorLine"
            />
        <TextView
            android:id="@+id/textview_marquee_forever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="#50000000"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:text="广告招商火热进行中...QQ：756774773   email:hongchunlt@gmail.com  微信:123456789 "
            android:textSize="@dimen/dimen_textsize_normal"
            android:padding="5dp"
            android:textColor="@android:color/white"
            />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_home_tab_column_spilt"
        >
        <TextView
            android:id="@+id/textview_video"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_home_tab_viedeo"
            android:gravity="center"
            android:drawableTop="@mipmap/main_lottery"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:textSize="@dimen/dimen_textsize_normal"
            android:textColor="@color/colorContentTextColor"
            />
        <TextView
            android:id="@+id/textview_map"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_home_tab_map"
            android:gravity="center"
            android:drawableTop="@mipmap/main_find"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:textSize="@dimen/dimen_textsize_normal"
            android:textColor="@color/colorContentTextColor"
            />
            <TextView
                android:id="@+id/textview_pay"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_home_tab_pay"
                android:gravity="center"
                android:drawableTop="@mipmap/main_balance"
                android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
                android:textSize="@dimen/dimen_textsize_normal"
                android:textColor="@color/colorContentTextColor"
                />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_home_tab_column_spilt"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textview_read"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_home_tab_read"
            android:gravity="center"
            android:drawableTop="@mipmap/main_group_call"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:textSize="@dimen/dimen_textsize_normal"
            android:textColor="@color/colorContentTextColor"
            />
        <TextView
            android:id="@+id/textview_game"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_home_tab_game"
            android:gravity="center"
            android:drawableTop="@mipmap/main_shop"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:textSize="@dimen/dimen_textsize_normal"
            android:textColor="@color/colorContentTextColor"
            />
        <TextView
            android:id="@+id/textview_setting"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_home_tab_setting"
            android:gravity="center"
            android:drawableTop="@mipmap/main_settings"
            android:drawablePadding="@dimen/dimen_home_tab_drawblePaddin"
            android:textSize="@dimen/dimen_textsize_normal"
            android:textColor="@color/colorContentTextColor"
            />
    </LinearLayout>
</LinearLayout>
