<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hongchun.myapplication.ui.activity.account.LoginActivity">
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/skyblue_logo_wechatmoments_checked"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dimen_boundary_width"
        android:layout_marginRight="@dimen/dimen_boundary_width"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_login_edittext_height"
            android:orientation="horizontal"
            android:background="@drawable/selector_login_edittext"
            >
            <EditText
                android:id="@+id/edittext_username"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/string_phone"
                android:drawableLeft="@mipmap/ui8_userlogin_account_icon"
                android:drawablePadding="@dimen/dimen_login_edittext_paddin"
                android:textColorHint="@color/colorHintTextColor"
                android:textColor="@color/colorContentTextColor"
                android:paddingLeft="@dimen/dimen_login_edittext_paddin"
                android:textSize="@dimen/dimen_textsize_normal"
                android:background="@null"
                android:singleLine="true"
                />
            <ImageButton
                android:id="@+id/imagebutton_username_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/selector_button_close"
                android:paddingRight="@dimen/dimen_login_close_mar"
                android:background="@null"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_login_split_height"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_login_edittext_height"
            android:orientation="horizontal"
            android:background="@drawable/selector_login_edittext"
            >
            <EditText
                android:id="@+id/edittext_password"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@mipmap/ui8_userlogin_pwd_icon"
                android:drawablePadding="@dimen/dimen_login_edittext_paddin"
                android:paddingLeft="@dimen/dimen_login_edittext_paddin"
                android:hint="@string/string_password"
                android:textColorHint="@color/colorHintTextColor"
                android:textColor="@color/colorContentTextColor"
                android:textSize="@dimen/dimen_textsize_normal"
                android:background="@null"
                android:inputType="textPassword"
                android:singleLine="true"
                />

            <CheckBox
                android:id="@+id/checkbox_password_show"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/selector_button_show_password"
                android:paddingRight="@dimen/dimen_login_edittext_paddin"
                android:background="@null"
                />
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_login_split_height"
            android:background="@drawable/selector_button_normal"
            android:text="@string/string_loging"
            android:textColor="@color/colorContentTextColor"
            android:textSize="@dimen/dimen_textsize_normal"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_login_split_height"
            >
            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_register"
                android:background="@null"
                android:textColor="@color/colorContentTextColor"
                android:textSize="@dimen/dimen_textsize_small"
                />
            <View
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                />
            <Button
                android:id="@+id/button_forgrtpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_forgetpassword"
                android:background="@null"
                android:textColor="@color/colorContentTextColor"
                android:textSize="@dimen/dimen_textsize_small"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:gravity="bottom|center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_description"
            android:textSize="@dimen/dimen_textsize_small_x"
            android:textColor="@color/colorHintTextColor"
            />
    </LinearLayout>


</LinearLayout>
